Update pipeline Sample

--- a/.harness/Sample.yaml
+++ b/.harness/Sample.yaml
@@ -8,7 +8,7 @@ pipeline:
     ci:
       codebase:
         connectorRef: account.Github_OAuth_1689838783895
-        repoName: https://github.com/deepz-here/harness-ci-example.git
+        repoName: https://github.com/deepz-here/harness-ci-example
         build: <+input>
   stages:
     - stage:
